<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.LocationActivity">

    <TextView
        android:id="@+id/tv_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_camping_title"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toStartOf="@+id/tv_location_title"
        app:layout_constraintTop_toTopOf="@+id/tv_location_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_location_title"/>

    <TextView
        android:id="@+id/tv_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/location_camping_all"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location_title"/>
    <View
        android:id="@+id/all_view"
        android:layout_width="40dp"
        android:layout_height="3dp"
        android:visibility="invisible"
        android:background="@color/location_viewpager"
        app:layout_constraintTop_toBottomOf="@id/tv_all"
        app:layout_constraintStart_toStartOf="@id/tv_all"
        app:layout_constraintEnd_toEndOf="@id/tv_all"/>
    <TextView
        android:id="@+id/tv_sudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginStart="16dp"
        android:text="@string/location_camping_sudo"
        app:layout_constraintStart_toEndOf="@id/tv_all"
        app:layout_constraintTop_toTopOf="@id/tv_all"
        app:layout_constraintBottom_toBottomOf="@+id/tv_all"/>
    <View
        android:id="@+id/sudo_view"
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:visibility="invisible"
        android:background="@color/location_viewpager"
        app:layout_constraintTop_toBottomOf="@id/tv_sudo"
        app:layout_constraintStart_toStartOf="@id/tv_sudo"
        app:layout_constraintEnd_toEndOf="@id/tv_sudo"/>
    <TextView
        android:id="@+id/tv_gangwon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/location_camping_gangwon"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_sudo"
        app:layout_constraintTop_toTopOf="@id/tv_sudo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sudo"/>
    <View
        android:id="@+id/gangwon_view"
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:visibility="invisible"
        android:background="@color/location_viewpager"
        app:layout_constraintTop_toBottomOf="@id/tv_gangwon"
        app:layout_constraintStart_toStartOf="@id/tv_gangwon"
        app:layout_constraintEnd_toEndOf="@id/tv_gangwon"/>

    <TextView
        android:id="@+id/tv_chungcheong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/location_camping_chungcheong"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_gangwon"
        app:layout_constraintStart_toEndOf="@id/tv_gangwon"
        app:layout_constraintTop_toTopOf="@id/tv_gangwon"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/chungcheong_view"
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:visibility="invisible"
        android:background="@color/location_viewpager"
        app:layout_constraintTop_toBottomOf="@id/tv_chungcheong"
        app:layout_constraintStart_toStartOf="@id/tv_chungcheong"
        app:layout_constraintEnd_toEndOf="@id/tv_chungcheong"/>
    <TextView
        android:id="@+id/tv_jeolla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/location_camping_jeolla"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_chungcheong"
        app:layout_constraintTop_toTopOf="@id/tv_chungcheong"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chungcheong"/>
    <View
        android:id="@+id/jeolla_view"
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:visibility="invisible"
        android:background="@color/location_viewpager"
        app:layout_constraintTop_toBottomOf="@id/tv_jeolla"
        app:layout_constraintStart_toStartOf="@id/tv_jeolla"
        app:layout_constraintEnd_toEndOf="@id/tv_jeolla"/>
    <TextView
        android:id="@+id/tv_gyeongsang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/location_camping_gyeongsang"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_jeolla"
        app:layout_constraintTop_toTopOf="@id/tv_jeolla"
        app:layout_constraintBottom_toBottomOf="@+id/tv_jeolla"/>
    <View
        android:id="@+id/gyeongsang_view"
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:visibility="invisible"
        android:background="@color/location_viewpager"
        app:layout_constraintTop_toBottomOf="@id/tv_gyeongsang"
        app:layout_constraintStart_toStartOf="@id/tv_gyeongsang"
        app:layout_constraintEnd_toEndOf="@id/tv_gyeongsang"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/location_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/loading_animation"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/lottie_search_loading"
        app:lottie_loop="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chungcheong_view"/>


</androidx.constraintlayout.widget.ConstraintLayout>